LAW-19/Send_doc_type_A_to_Admin
