# server/controllers/DocProxyTypeAController/docProxyTypeA.router.js
@@ -6,6 +6,7 @@ const upload = require('../../helpers/uploadScreens');
 
 router.get('/', auth, DocProxyTypeAController.findAll);
 router.get('/:id', auth, DocProxyTypeAController.findOne);
+router.patch('/:id', auth, DocProxyTypeAController.sendToCheck);
 router.post('/', auth, DocProxyTypeAController.createOne);
 router.post('/:id', auth, existDocTypeAMiddleware, upload.fields([{ name: 'passport', maxCount: 10 }, { name: 'inn', maxCount: 1 }]), DocProxyTypeAController.uploadScreens);
 router.get('/uploads/:img', auth, DocProxyTypeAController.uploads);
